--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-MYSQL_HOST = "localhost"
+MYSQL_HOST = "127.0.0.1"
 MYSQL_USER = "root"
 MYSQL_PASSWORD = "DataBased_777!NeJxHw"
 MYSQL_DATABASE = "ctracker1"
-MYSQL_PORT = "3006"
+MYSQL_PORT = "3306"
 PORT = "4006"
