Config DB finie - fetch de toutes les candidatures fonctionnel

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-MYSQL_HOST = "127.0.0.1"
+MYSQL_HOST = "localhost"
 MYSQL_USER = "root"
 MYSQL_PASSWORD = "DataBased_777!NeJxHw"
-MYSQL_DATABASE = "ctracker1"
+MYSQL_DATABASE = "ctracker"
 MYSQL_PORT = "3306"
-PORT = "4006"
+PORT = "5001"
